# ILI9341-TFT-LVGL

./: .gitignore  CMakeLists.txt  CMakePresets.json  PORTING_NUCLEO_U575.md  README.md  RELEASE_NOTES.md  REWORK_PLAN.md
.claude/: settings.local.json
.github/prompts/: doc-sdd.prompt.md  doc-test-protocol.prompt.md  driver-review.prompt.md  new-driver.prompt.md  review-firmware.prompt.md  scaffold-cubemx-app.prompt.md
App/: CMakeLists.txt  app_main.c  app_main.h  clock_protocol.c  clock_protocol.h  drv_constants.h  lv_conf.h  system.c  system.h
App/drivers/: README.md  REWORK_PLAN.md
App/drivers/adapters/lvgl/: lv_ili9341.c  lv_ili9341.h  lv_touch_calibrate.h  lv_xpt2046.c
App/drivers/adapters/touchgfx/: README.md
App/drivers/cmake/: check_layering.cmake  layering_check_script.cmake
App/drivers/include/drv/: drv_config.h  drv_os.h  drv_setup.h  xpt2046.h
App/drivers/src/: drv_setup.c  ili9341.c  xpt2046.c
App/drivers/src/os/: drv_os_baremetal.c  drv_os_cmsis2.c
App/drivers/src/port/: drv_gpio_stm32.c  drv_spi_stm32.c
App/drivers/tests/host/: test_ili9341_flush_async.c  test_ili9341_init.c  test_ili9341_window.c  test_osal_baremetal.c  test_xpt2046_mapping.c  test_xpt2046_read.c
App/drivers/tests/host/mocks/: mock_gpio.c  mock_gpio.h  mock_hal_tick.c  mock_os.h  mock_seq.c  mock_seq.h  mock_spi.h
App/gui/: gui.c  gui.h
Board/: board_config.h  board_drivers.c  board_drivers.h
Board/boards/: board_stm32f411.h  board_stm32f446.h
Display/: ILI9341.c  ILI9341.h  LCDController.c  LCDController.h  TouchController.c  TouchController.h  XPT2046.c  XPT2046.h  display_runtime_config.h
Profiles/board_1/: .mxproject  CMakeLists.txt  STM32F446XX_FLASH.ld  board_1.ioc
Profiles/board_1/Core/Inc/: FreeRTOSConfig.h  main.h  rtc.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
Profiles/board_1/Core/Src/: dma.c  freertos.c  gpio.c  main.c  rtc.c  spi.c  stm32f4xx_hal_timebase_tim.c  stm32f4xx_it.c  usart.c
Profiles/board_1/TouchGFX/: ApplicationTemplate.touchgfx.part  application.config  board_1.touchgfx  target.config
Profiles/board_1/TouchGFX/assets/texts/: texts.xml
Profiles/board_1/TouchGFX/config/gcc/: app.mk
Profiles/board_1/TouchGFX/config/msvs/: Application.props
Profiles/board_1/TouchGFX/gui/include/gui/background_screen/: backgroundPresenter.hpp  backgroundView.hpp
Profiles/board_1/TouchGFX/gui/include/gui/model/: Model.hpp
Profiles/board_1/TouchGFX/gui/src/background_screen/: backgroundPresenter.cpp  backgroundView.cpp
Profiles/board_1/TouchGFX/gui/src/model/: Model.cpp
Profiles/board_1/TouchGFX/simulator/msvs/: Application.vcxproj  Application.vcxproj.filters
Profiles/board_1/cmake/: gcc-arm-none-eabi.cmake  starm-clang.cmake
Profiles/board_1/cmake/stm32cubemx/: CMakeLists.txt
Profiles/board_1/cmake/touchgfx/: CMakeLists.txt
adapters/lvgl/: lv_touch_calibrate.c  lv_xpt2046.h
dashboard/: rtc-dashboard.html
examples/ILI9341_Demo/: .mxproject  CMakeLists.txt  ILI9341_Demo.ioc
examples/ILI9341_Demo/Core/Inc/: FreeRTOSConfig.h  ILI9341.h  TouchController.h  stm32f4xx_hal_conf.h
examples/ILI9341_Demo/Core/Src/: ILI9341.c  LCDController.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
examples/ILI9341_Demo/Drivers/: lv_conf.h
examples/ILI9341_Demo/Drivers/lvgl/env_support/cmake/: custom.cmake
examples/ILI9341_Demo/Drivers/lvgl/src/osal/: lv_cmsis_rtos2.c
examples/ILI9341_Demo/cmake/stm32cubemx/: CMakeLists.txt
examples/LVGL_Lesson/01_Display/: 01_Display.ioc  CMakeLists.txt  README.md  README_MEMORY.md  STM32F446XX_FLASH.ld  plan-progress.md
examples/LVGL_Lesson/01_Display/App/: CMakeLists.txt  app_main.c  app_main.h
examples/LVGL_Lesson/01_Display/App/gui/: gui.c
examples/LVGL_Lesson/01_Display/App/lvgl/src/osal/: lv_cmsis_rtos2.c
examples/LVGL_Lesson/01_Display/Core/Inc/: FreeRTOSConfig.h  main.h  stm32f4xx_it.h
examples/LVGL_Lesson/01_Display/Core/Src/: dma.c  freertos.c  main.c  rtc.c
examples/LVGL_Lesson/01_Display/Drivers/ILI9341/: ILI9341.c  LCDController.c
examples/LVGL_Lesson/01_Display/Drivers/XPT2046/: TouchController.c  TouchController.h
examples/LVGL_Lesson/01_Display/Drivers/lvgl/src/: lv_conf_internal.h
examples/LVGL_Lesson/01_Display/Profiles/board_1/: .mxproject
examples/LVGL_Lesson/01_Display/Profiles/board_1/Core/Inc/: FreeRTOSConfig.h  main.h  stm32f4xx_it.h
examples/LVGL_Lesson/01_Display/Profiles/board_1/Core/Src/: cmsis_os2_ext.c  dma.c  freertos.c  gpio.c  main.c  spi.c  stm32f4xx_it.c  usart.c
examples/LVGL_Lesson/01_Display/Profiles/board_1/cmake/: gcc-arm-none-eabi.cmake  starm-clang.cmake
examples/LVGL_Lesson/01_Display/Profiles/board_1/cmake/stm32cubemx/: CMakeLists.txt
examples/LVGL_Lesson/01_Display/tests/full_system/: README.md  hardware_smoke_checklist.md  validate_display_stack.py
examples/LVGL_Lesson/02_Touch/: .mxproject  02_Touch.ioc  CMakeLists.txt
examples/LVGL_Lesson/02_Touch/Core/Src/: freertos.c  gpio.c  main.c  spi.c  stm32f4xx_it.c
include/: FreeRTOSConfig.h  ILI9341.h  LCDController.h  XPT2046.h
include/drv/: drv_gpio.h  drv_isr.h  drv_policy.h  drv_spi.h  ili9341.h  xpt2046.h
src/: TouchController.c  XPT2046.c  drv_isr_glue.c  drv_setup.c  ili9341.c  xpt2046.c
src/os/: drv_os_baremetal.c  drv_os_cmsis2.c
stm32/Core/: LCDController.c
stm32/Drivers/ILI9341/: ILI9341.c  ILI9341.h
stm32/Drivers/LVGL_9_4/: INDEX.md  INSTALLATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  lv_drv_conf_template.h  lvgl_integration_example.c
stm32/Drivers/LVGL_9_4/DMA2D/: lv_draw_dma2d.c  lv_draw_dma2d.h
stm32/Drivers/LVGL_9_4/LTDC/: lv_st_ltdc.c  lv_st_ltdc.h
stm32/Drivers/LVGL_9_4/NeoChrom/: lv_nema_gfx.c  lv_nema_gfx.h
stm32/Drivers/LVGL_9_4/SPI_Display/: lv_st_spi_display.c  lv_st_spi_display.h
templates/: drv_constants_template.h
tests/host/: CMakeLists.txt  run.sh  test_clock_protocol.c
tests/host/mocks/: mock_os.c  mock_spi.c
